fix: Time flickering issue in Bubble skin

--- a/assets/src/css/bubble-skin.scss
+++ b/assets/src/css/bubble-skin.scss
@@ -125,6 +125,7 @@
 				bottom: 25px;
 				right: 90px;
 				z-index: 19;
+				pointer-events: none;
 			}
 		}
 
@@ -138,6 +139,7 @@
 				left: 40px;
 				bottom: 25px;
 				z-index: 19;
+				pointer-events: none;
 			}
 		}
 
